            - changed "rules_listview_create()" to auto fill values to table without calling "rules_listview_fill()" seperate
            - changed announcing path wxDirPickerCtrl default
            - changed dirpicker_path:wxEVT_KILL_FOCUS to update path for dirpicker
            - changed dirpicker:wxEVT_COMMAND_DIRPICKER_CHANGED to update path for dirpicker
        - tab 5:
            - replaced categories_listbox elements with categories_listview
            - added column to show how many times the category name exists on the rules table
            - added check to enable/disable delete button on categories_listview selection event + "unprotect_hub_values()"
            - added import + export button
            - added status text on categoryname has changed to display if new name is unique or not
            - changed width of listview
            - changed listview header names to values from "table.getCategories()" key list
            - changed "categories_listview_create()" to auto fill values to table without calling "categories_listview_fill()" seperate
            - changed style of export filepicker from wxFLP_FILE_MUST_EXIST to wxFLP_SAVE
        - tab 6:
            - added "set_logfilesize()" to every Logfile Load Button Event
            - replaced manual count of lines on "log_handler()" by "ctrl:GetNumberOfLines()"
            - changed "log_handler()" replaced "tmp_file.txt" logic with simple "parent:LoadFile()"
        - global:
            - changed code style to fit code standard
            - changed "need_save" to object and track changes for Tab 1 + Tab 2 + Tab 3
            - renamed button "save_hub_cfg" to "save_hub"
            - renamed button "save_button" to "save_rules"
            - extended "table" object which contain all table methods
            - added "validate" object which contain all validator methods
            - added "dialog" object which contain all validator methods